# exam-project

dll_files/: desktop.ini
mainProject/: CMakeLists.txt  client.cpp  client.h  mainwindow.cpp  mainwindow.h  task.cpp  task.h  taskManager.h
serverProject/: CMakeLists.txt  httpserver.cpp  httpserver.h  main.cpp  task.cpp
